<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a678developers.food_on_version_00.login_details">

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_login_txt"
        android:layout_marginTop="103dp"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/login_btn"
        android:layout_alignLeft="@+id/login_btn" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/password"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/email_login_txt"
        android:layout_alignStart="@+id/email_login_txt"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/email_login_txt" />

    <Button
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:layout_marginTop="66dp"
        android:textSize="20sp"
        android:background="#96ffffff"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password"
        android:id="@+id/forgotten_password_txt"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textSize="25sp"
        android:clickable="false" />
</RelativeLayout>
