<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a678developers.food_on_version_00.signup_details">

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name_signup_txt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:hint="Name"
        android:textSize="20sp"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_signup_txt"
        android:layout_below="@+id/name_signup_txt"
        android:layout_alignStart="@+id/name_signup_txt"
        android:hint="Email address"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/name_signup_txt" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_signup_txt"
        android:layout_below="@+id/email_signup_txt"
        android:layout_alignStart="@+id/email_signup_txt"
        android:hint="@string/password"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/email_signup_txt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_alignStart="@+id/password_signup_txt"
        android:layout_alignEnd="@+id/password_signup_txt"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textSize="20sp"
        android:hint="@string/country_name"
        android:layout_below="@id/password_signup_txt"
        android:layout_alignLeft="@+id/password_signup_txt"
        android:layout_alignRight="@+id/password_signup_txt" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:hint="@string/city"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/can_apos_t_wait_sign_me_up"
        android:id="@+id/signup_btn"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:background="#96ffffff" />


</RelativeLayout>
